salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/Stock_Share_Bottom_Position__c.object-meta.xml
<CustomObject>
    <label>Stock Share Bottom Position</label>
    <nameField>
        <label>Stock Share Bottom Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Share Bottom Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>