salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Base_Position__c.field-meta.xml
<CustomField>
    <fullName>Base_Position__c</fullName>
    <label>Base Position</label>
    <referenceTo>Base_Position__c</referenceTo>
    <relationshipLabel>Stock Share Bottom Positions</relationshipLabel>
    <relationshipName>Stock_Share_Bottom_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>