salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>