salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Stock_Share_Action__c.field-meta.xml
<CustomField>
    <fullName>Stock_Share_Action__c</fullName>
    <label>Stock Share Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>