salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Stock_Share_Add_or_Subtract__c.field-meta.xml
<CustomField>
    <fullName>Stock_Share_Add_or_Subtract__c</fullName>
    <formula>IF(  ISPICKVAL(Stock_Share_Action__c, &apos;Buy&apos;), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Share Add or Subtract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>