salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Stock_Share_Order_Principal__c.field-meta.xml
<CustomField>
    <fullName>Stock_Share_Order_Principal__c</fullName>
    <formula>Stock_Share_Price__c *  Number_of_Shares__c *  Stock_Share_Add_or_Subtract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Share Order Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>