salesforce-reference/force-app/main/default/objects/Stock_Share_Bottom_Position__c/fields/Stock_Share_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Share_Price__c</fullName>
    <label>Stock Share Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>